telepathy: Simplify the code by re-using the existing GoaClient

https://bugzilla.gnome.org/show_bug.cgi?id=767299